[更新] 1.加入音效 2.加入彈跳視窗 3.加入鍵盤互動

--- a/qml.qrc
+++ b/qml.qrc
@@ -6,5 +6,6 @@
         <file>image/qtlogo.png</file>
         <file>components/DarkButton.qml</file>
         <file>components/LightButton.qml</file>
+        <file>image/door_chime0.mp3</file>
     </qresource>
 </RCC>
